<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailedViewActivity">

    <TextView
        android:id="@+id/detailstextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginBottom="51dp"
        android:text="@string/details"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/averageScreenTimeTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/averageScreenTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginBottom="51dp"
        android:text="@string/averagescreentime"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/backButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginBottom="196dp"
        android:text="@string/backbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>